# netlist-crawler

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
benchmarks/: seed_tasks.json
examples/: cascode_stage.sp  hierarchical_ota.sp  include_top.sp  named_port_hierarchy.sp  param_subckt.sp  rail_bridge.sp  simple_diff_pair.sp  two_subckts.sp
examples/ferrosim/: README.md
examples/ferrosim/tests/decks/: cap_meas.scs  ldo.scs  ring5.scs  sc_integrator.scs  va_decl_init.scs
examples/ferrosim/tests/sc_sample/: sc_sample.scs
examples/ferrosim/tests/va_demo/: tb_chain.scs  tb_cswitch_res.scs  tb_cswitch_short.scs  tb_degsh.scs  tb_diode.scs  tb_sqlaw.scs  tb_tee.scs
examples/include_blocks/: diff_core.inc
examples/parasitics/: f1_rc_ladder.dspf  f1_rc_ladder.mrpp  f1_rc_ladder.subckt.scs  f2_diffpair_cc.mrpp  f3_series_parallel.flat.scs  f3_series_parallel.mrpp  f4_within_net.flat.scs
src/netlist_crawler/: __init__.py  benchmark.py  cli.py  ir.py  structural.py
src/netlist_crawler/parasitics/: __init__.py  inject.py  ir.py  md_to_pdf.py  parse_cache.py  prescribe.py  report.py  scan.py  strip_parasitics.py  sweep.py  test_all.py
src/netlist_crawler/parasitics/adapters/: __init__.py  _util.py  dspf.py  mrpp.py  spectre.py
src/netlist_crawler/parasitics/fixtures/: f1_rc_ladder.flat.scs  f2_diffpair_cc.dspf  f2_diffpair_cc.flat.scs  f2_diffpair_cc.subckt.scs  f4_within_net.dspf
src/netlist_crawler/parasitics/kernels/: __init__.py  cc.py  cg.py  diff.py  (+2 more)
tests/: test_api.py  test_cli.py  test_ir.py  test_parasitic_cli.py  test_parasitics.py  test_readme_examples.py  test_semantic_contracts.py
(+109 files in other folders)
